# halide_sandbox

./: .gitignore  CMakeLists.txt  README.md
HalideCV/: CMakeLists.txt  README.md  demo.cpp  make_demo_plots.sh
HalideCV/include/: HalideCV.h
StereoBM/: CMakeLists.txt  main.cpp
StereoBM/include/: StereoBM.h
StereoBM/src/: StereoBM.cpp
hello_world/: CMakeLists.txt  hello_world.cpp
python/: opencv.py
tutorials/: CMakeLists.txt  main.cpp  make_jif.sh  make_jifs.sh  tutorial_03_gradient.html
tutorials/include/: 01.h  02.h  03.h  04.h  05.h  06.h  07.h  timer.h
util/: CMakeLists.txt
